--- a/liquidwar6/data/p2p/sql/Makefile.in
+++ b/liquidwar6/data/p2p/sql/Makefile.in
@@ -293,7 +293,7 @@ target_vendor = @target_vendor@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-pkgdata_DATA = clean-database.sql create-database.sql delete-connection-by-ptr.sql delete-node-by-id.sql delete-node-by-url.sql delete-old-node.sql insert-connection.sql insert-local-node.sql insert-discovered-node.sql select-connection.sql select-node-by-url.sql select-other-node.sql select-unverified-node.sql update-node.sql
+pkgdata_DATA = clean-database.sql create-database.sql delete-connection-by-ptr.sql delete-node-by-id.sql delete-node-by-url.sql delete-old-node.sql insert-connection.sql insert-local-node.sql insert-discovered-node.sql select-connection.sql select-node-by-url.sql select-other-node.sql select-unverified-node.sql select-available-node.sql select-unavailable-node.sql update-node.sql
 EXTRA_DIST = $(pkgdata_DATA)
 all: all-am
 
