added metadata to maps

--- a/liquidwar6/map/five-points/Makefile.am
+++ b/liquidwar6/map/five-points/Makefile.am
@@ -18,7 +18,7 @@
 # Liquid War 6 homepage : http://www.gnu.org/software/liquidwar6/
 # Contact author        : ufoot@ufoot.org
 
-pkgdata_DATA = README hints.xml layer2.png layer3.png map.png rules.xml style.xml teams.xml texture.jpeg
+pkgdata_DATA = README hints.xml layer2.png layer3.png map.png rules.xml style.xml teams.xml metadata.xml texture.jpeg
 pkgdatadir = $(datadir)/@PACKAGE_TARNAME@-@PACKAGE_VERSION@/map/five-points
 EXTRA_DIST = $(pkgdata_DATA)
 
