--- a/liquidwar6/map/acadia/Makefile.in
+++ b/liquidwar6/map/acadia/Makefile.in
@@ -293,7 +293,7 @@ target_vendor = @target_vendor@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-pkgdata_DATA = README map.png texture.jpeg style.xml teams.xml rules.xml
+pkgdata_DATA = README map.png texture.jpeg style.xml teams.xml rules.xml metadata.xml
 EXTRA_DIST = $(pkgdata_DATA)
 all: all-am
 
