--- a/liquidwar6/src/lib/liquidwar6.h.in
+++ b/liquidwar6/src/lib/liquidwar6.h.in
@@ -40,7 +40,9 @@
 #include "cfg/cfg.h"
 #include "map/map.h"
 #include "ker/ker.h"
+#include "pil/pil.h"
 #include "bot/bot.h"
+#include "sim/sim.h"
 #include "ldr/ldr.h"
 #include "tsk/tsk.h"
 #include "gui/gui.h"
@@ -48,7 +50,6 @@
 #include "dsp/dsp.h"
 #include "snd/snd.h"
 #include "img/img.h"
-#include "pil/pil.h"
 #include "net/net.h"
 #include "nod/nod.h"
 #include "cnx/cnx.h"
