Added a new module to simulate fights and calibrate profiles.

--- a/liquidwar6/src/lib/sim/Makefile.am
+++ b/liquidwar6/src/lib/sim/Makefile.am
@@ -28,7 +28,7 @@ LW6DYN_LIB = ../dyn/libdyn.la
 endif
 
 noinst_LTLIBRARIES = libsim.la
-libsim_la_SOURCES = sim-simulate.c sim-test.c
+libsim_la_SOURCES = sim-mask.c sim-print.c sim-results.c sim-simulate.c sim-test.c
 libsimdir= $(includedir)/@PACKAGE_TARNAME@/sim
 libsim_HEADERS = sim.h
 
@@ -39,3 +39,4 @@ liquidwar6sim_test_LDADD = libsim.la ../bot/libbot.la $(LW6DYN_LIB) ../pil/libpi
 TESTS = liquidwar6sim-test
 endif
 
+EXTRA_DIST = sim-internal.h
