--- a/liquidwar6/doc/Makefile.in
+++ b/liquidwar6/doc/Makefile.in
@@ -1123,7 +1123,7 @@ uninstall-local:
 @LW6_GDOC_TRUE@$(srcdir)/scm-gdoc.texi: ../src/lib/scm/scm.h ../src/lib/scm/scm-test.c ../src/lib/scm/scm-testmain.c ../src/lib/scm/scm-wrapper.c
 @LW6_GDOC_TRUE@	echo gdoc scm && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/scm-gdoc.texi
 
-@LW6_GDOC_TRUE@$(srcdir)/sim-gdoc.texi: ../src/lib/sim/sim.h ../src/lib/sim/sim-simulate.c ../src/lib/sim/sim-test.c ../src/lib/sim/sim-testmain.c
+@LW6_GDOC_TRUE@$(srcdir)/sim-gdoc.texi: ../src/lib/sim/sim.h ../src/lib/sim/sim-internal.h ../src/lib/sim/sim-mask.c ../src/lib/sim/sim-print.c ../src/lib/sim/sim-results.c ../src/lib/sim/sim-simulate.c ../src/lib/sim/sim-test.c ../src/lib/sim/sim-testmain.c
 @LW6_GDOC_TRUE@	echo gdoc sim && cd $(top_srcdir)/doc && $(PERL) $(top_srcdir)/doc/gdoc.pl -texinfo $^ > $(top_srcdir)/doc/sim-gdoc.texi
 
 @LW6_GDOC_TRUE@$(srcdir)/snd-gdoc.texi: ../src/lib/snd/snd-api.c ../src/lib/snd/snd.h ../src/lib/snd/snd-register.c ../src/lib/snd/snd-test.c ../src/lib/snd/snd-testmain.c
