Added description ofcolors and weapons to (self-generated) doc

--- a/liquidwar6/doc/Makefile.in
+++ b/liquidwar6/doc/Makefile.in
@@ -361,7 +361,7 @@ top_srcdir = @top_srcdir@
 SUBDIRS = coverage global cyclo example dtd
 info_TEXINFOS = liquidwar6.texi
 gdoc_TEXINFOS = liquidwar6-gdoc.texi bot-gdoc.texi cfg-gdoc.texi cli-gdoc.texi cns-gdoc.texi cnx-gdoc.texi dat-gdoc.texi dsp-gdoc.texi dyn-gdoc.texi fdl.texi gfx-gdoc.texi glb-gdoc.texi gpl.texi gui-gdoc.texi hlp-gdoc.texi img-gdoc.texi ker-gdoc.texi ldr-gdoc.texi liquidwar6-gdoc.texi map-gdoc.texi mod-brute-gdoc.texi mod-csound-gdoc.texi mod-follow-gdoc.texi mod-gl-gdoc.texi mod-httpd-gdoc.texi mod-http-gdoc.texi mod-idiot-gdoc.texi mod-ogg-gdoc.texi mod-random-gdoc.texi mod-tcpd-gdoc.texi mod-tcp-gdoc.texi mod-udpd-gdoc.texi mod-udp-gdoc.texi msg-gdoc.texi net-gdoc.texi nod-gdoc.texi p2p-gdoc.texi pil-gdoc.texi scm-gdoc.texi sim-gdoc.texi snd-gdoc.texi srv-gdoc.texi sys-gdoc.texi tsk-gdoc.texi vox-gdoc.texi
-selfdoc_TEXINFOS = quick-selfdoc.texi doc-selfdoc.texi show-selfdoc.texi path-selfdoc.texi players-selfdoc.texi input-selfdoc.texi graphics-selfdoc.texi sound-selfdoc.texi network-selfdoc.texi map-selfdoc.texi map-rules-selfdoc.texi map-hints-selfdoc.texi map-style-selfdoc.texi map-teams-selfdoc.texi funcs-selfdoc.texi hooks-selfdoc.texi advanced-selfdoc.texi aliases-selfdoc.texi
+selfdoc_TEXINFOS = quick-selfdoc.texi doc-selfdoc.texi show-selfdoc.texi path-selfdoc.texi players-selfdoc.texi input-selfdoc.texi graphics-selfdoc.texi sound-selfdoc.texi network-selfdoc.texi map-selfdoc.texi map-rules-selfdoc.texi map-hints-selfdoc.texi map-style-selfdoc.texi map-teams-selfdoc.texi funcs-selfdoc.texi hooks-selfdoc.texi advanced-selfdoc.texi aliases-selfdoc.texi team-colors-selfdoc.texi weapons-selfdoc.texi
 liquidwar6_TEXINFOS = gpl.texi fdl.texi version.texi stamp.texi const.texi $(gdoc_TEXINFOS) $(selfdoc_TEXINFOS)
 man6_MANS = liquidwar6.man
 EXTRA_DIST = COPYING gdoc.pl gdoc-update.sh selfdoc.pl selfdoc-update.sh deps.dot deps.eps deps.txt mod-gl-layout.xcf mod-gl-layout.ods
@@ -1237,6 +1237,12 @@ uninstall-local:
 
 @LW6_SELFDOC_TRUE@$(srcdir)/funcs-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
 @LW6_SELFDOC_TRUE@	echo selfdoc funcs && for k in `$(top_builddir)/src/liquidwar6 --list-funcs` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 func $$k ; done > $(srcdir)/funcs-selfdoc.texi
+
+@LW6_SELFDOC_TRUE@$(srcdir)/team-colors-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
+@LW6_SELFDOC_TRUE@	echo selfdoc team-colors && for k in `$(top_builddir)/src/liquidwar6 --list-team-colors` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 item $$k ; done > $(srcdir)/team-colors-selfdoc.texi
+
+@LW6_SELFDOC_TRUE@$(srcdir)/weapons-selfdoc.texi: $(top_srcdir)/src/lib/hlp/hlp-reference.c
+@LW6_SELFDOC_TRUE@	echo selfdoc weapons && for k in `$(top_builddir)/src/liquidwar6 --list-weapons` ; do $(PERL) $(top_srcdir)/doc/selfdoc.pl $(top_builddir)/src/liquidwar6 item $$k ; done > $(srcdir)/weapons-selfdoc.texi
 
 # Tell versions [3.59,3.63) of GNU make to not export all variables.
 # Otherwise a system limit (for SysV at least) may be exceeded.
