--- a/liquidwar6/src/lib/liquidwar6.h.in
+++ b/liquidwar6/src/lib/liquidwar6.h.in
@@ -242,6 +242,8 @@ extern void lw6_print_list_funcs ();
 extern void lw6_print_list_hooks ();
 extern void lw6_print_list_advanced ();
 extern void lw6_print_list_aliases ();
+extern void lw6_print_list_team_colors ();
+extern void lw6_print_list_weapons ();
 extern void lw6_print_list ();
 extern void lw6_print_about (char *keyword);
 extern void lw6_print_hello (int argc, char *argv[]);
