--- a/liquidwar6/src/lib/gfx/mod-gl/gl-utils/Makefile.in
+++ b/liquidwar6/src/lib/gfx/mod-gl/gl-utils/Makefile.in
@@ -75,18 +75,18 @@ CONFIG_CLEAN_VPATH_FILES =
 LTLIBRARIES = $(noinst_LTLIBRARIES)
 libgl_utils_la_LIBADD =
 am_libgl_utils_la_OBJECTS = gl-utils-bitmap.lo gl-utils-bitmaparray.lo \
-	gl-utils-bitmaphash.lo gl-utils-capture.lo gl-utils-color.lo \
-	gl-utils-colorize.lo gl-utils-const.lo gl-utils-cursor.lo \
-	gl-utils-data.lo gl-utils-debug.lo gl-utils-display.lo \
-	gl-utils-draw.lo gl-utils-event.lo gl-utils-font.lo \
-	gl-utils-game.lo gl-utils-gradient.lo gl-utils-icon.lo \
-	gl-utils-info.lo gl-utils-joystick.lo gl-utils-light.lo \
-	gl-utils-menucache.lo gl-utils-mode.lo gl-utils-mouse.lo \
-	gl-utils-path.lo gl-utils-pixel.lo gl-utils-render.lo \
-	gl-utils-resolution.lo gl-utils-shadedtext.lo \
-	gl-utils-smoothers.lo gl-utils-surface.lo gl-utils-texture.lo \
-	gl-utils-texture1x1.lo gl-utils-timer.lo gl-utils-viewport.lo \
-	gl-utils-zones.lo
+	gl-utils-bitmaphash.lo gl-utils-cache.lo gl-utils-capture.lo \
+	gl-utils-color.lo gl-utils-colorize.lo gl-utils-const.lo \
+	gl-utils-cursor.lo gl-utils-data.lo gl-utils-debug.lo \
+	gl-utils-display.lo gl-utils-draw.lo gl-utils-event.lo \
+	gl-utils-font.lo gl-utils-game.lo gl-utils-gradient.lo \
+	gl-utils-icon.lo gl-utils-info.lo gl-utils-joystick.lo \
+	gl-utils-light.lo gl-utils-menucache.lo gl-utils-mode.lo \
+	gl-utils-mouse.lo gl-utils-path.lo gl-utils-pixel.lo \
+	gl-utils-render.lo gl-utils-resolution.lo \
+	gl-utils-shadedtext.lo gl-utils-smoothers.lo \
+	gl-utils-surface.lo gl-utils-texture.lo gl-utils-texture1x1.lo \
+	gl-utils-timer.lo gl-utils-viewport.lo gl-utils-zones.lo
 libgl_utils_la_OBJECTS = $(am_libgl_utils_la_OBJECTS)
 DEFAULT_INCLUDES = -I.@am__isrc@ -I$(top_builddir)
 depcomp = $(SHELL) $(top_srcdir)/depcomp
@@ -308,7 +308,7 @@ top_srcdir = @top_srcdir@
 AM_CFLAGS = @LW6_CFLAGS@ @SDL_CFLAGS@
 AM_LDFLAGS = @LW6_LDFLAGS@
 noinst_LTLIBRARIES = libgl-utils.la
-libgl_utils_la_SOURCES = gl-utils-bitmap.c gl-utils-bitmaparray.c gl-utils-bitmaphash.c gl-utils-capture.c gl-utils-color.c gl-utils-colorize.c gl-utils-const.c gl-utils-cursor.c gl-utils-data.c gl-utils-debug.c gl-utils-display.c gl-utils-draw.c gl-utils-event.c gl-utils-font.c gl-utils-game.c gl-utils-gradient.c gl-utils-icon.c gl-utils-info.c gl-utils-joystick.c gl-utils-light.c gl-utils-menucache.c gl-utils-mode.c gl-utils-mouse.c gl-utils-path.c gl-utils-pixel.c gl-utils-render.c gl-utils-resolution.c gl-utils-shadedtext.c gl-utils-smoothers.c gl-utils-surface.c gl-utils-texture.c gl-utils-texture1x1.c gl-utils-timer.c gl-utils-viewport.c gl-utils-zones.c
+libgl_utils_la_SOURCES = gl-utils-bitmap.c gl-utils-bitmaparray.c gl-utils-bitmaphash.c gl-utils-cache.c gl-utils-capture.c gl-utils-color.c gl-utils-colorize.c gl-utils-const.c gl-utils-cursor.c gl-utils-data.c gl-utils-debug.c gl-utils-display.c gl-utils-draw.c gl-utils-event.c gl-utils-font.c gl-utils-game.c gl-utils-gradient.c gl-utils-icon.c gl-utils-info.c gl-utils-joystick.c gl-utils-light.c gl-utils-menucache.c gl-utils-mode.c gl-utils-mouse.c gl-utils-path.c gl-utils-pixel.c gl-utils-render.c gl-utils-resolution.c gl-utils-shadedtext.c gl-utils-smoothers.c gl-utils-surface.c gl-utils-texture.c gl-utils-texture1x1.c gl-utils-timer.c gl-utils-viewport.c gl-utils-zones.c
 EXTRA_DIST = gl-utils.h
 all: all-am
 
@@ -365,6 +365,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gl-utils-bitmap.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gl-utils-bitmaparray.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gl-utils-bitmaphash.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gl-utils-cache.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gl-utils-capture.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gl-utils-color.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gl-utils-colorize.Plo@am__quote@
