--- a/liquidwar6/configure.ac
+++ b/liquidwar6/configure.ac
@@ -47,7 +47,7 @@ LW6_CODENAME="Blackbeard"
 AC_SUBST(LW6_CODENAME)
 
 dnl Headers, some are optional
-AC_CHECK_HEADERS(arpa/inet.h ctype.h dirent.h errno.h execinfo.h expat.h fcntl.h GL/gl.h GL/glu.h iconv.h ifaddrs.h jpeglib.h langinfo.h libguile.h libintl.h libpng12/png.h libpng13/png.h libpng14/png.h libpng15/png.h lmcons.h limits.h locale.h ltdl.h mach/vm_statistics.h mach/mach_types.h mach/mach_init.h mach/mach_host.h math.h netdb.h netinet/in.h omp.h pthread.h readline/history.h readline/readline.h SDL/SDL.h SDL/SDL_image.h SDL/SDL_mixer.h SDL/SDL_ttf.h signal.h stdarg.h stdio.h stdlib.h string.h syslog.h sys/select.h sys/signal.h sys/socket.h sys/stat.h sys/sysinfo.h sys/time.h sys/types.h sys/utsname.h time.h unistd.h winbase.h windows.h winsock2.h)
+AC_CHECK_HEADERS(arpa/inet.h ctype.h dirent.h errno.h execinfo.h expat.h fcntl.h gmp.h GL/gl.h GL/glu.h iconv.h ifaddrs.h jpeglib.h langinfo.h libintl.h libpng12/png.h libpng13/png.h libpng14/png.h libpng15/png.h lmcons.h limits.h locale.h ltdl.h mach/vm_statistics.h mach/mach_types.h mach/mach_init.h mach/mach_host.h math.h netdb.h netinet/in.h omp.h pthread.h readline/history.h readline/readline.h SDL/SDL.h SDL/SDL_image.h SDL/SDL_mixer.h SDL/SDL_ttf.h signal.h stdarg.h stdio.h stdlib.h string.h syslog.h sys/select.h sys/signal.h sys/socket.h sys/stat.h sys/sysinfo.h sys/time.h sys/types.h sys/utsname.h time.h unistd.h winbase.h windows.h winsock2.h)
 
 AM_MISSING_PROG(PERL, perl, ${missing_dir})
 AM_MISSING_PROG(AWK, awk, ${missing_dir})
@@ -144,19 +144,22 @@ if test x${VALGRIND} != xyes; then
    AC_MSG_NOTICE([Liquid War 6 suggests Valgrind (http://valgrind.org/)])
 fi
 
-dnl Check for libdl
-AC_CHECK_LIB(dl, dlopen, HAVE_LIBDL=1, AC_MSG_NOTICE([
-no libdl
+dnl Guile
+AC_CHECK_HEADER(gmp.h, HAVE_GMP_H=1, AC_MSG_WARN([
+*** Liquid War 6 needs GNU MP because of Guile (http://gmplib.org/)
 ]))
-
-dnl Required libraries
-AC_CHECK_HEADER(gmp.h, HAVE_GMP_H=1, AC_MSG_ERROR([
-*** Liquid War 6 needs GNU MP (http://gmplib.org/)
-]))
-
-AC_CHECK_HEADER(libguile.h, HAVE_LIBGUILE_H=1, AC_MSG_ERROR([
-*** Liquid War 6 needs Guile 1.8 (http://www.gnu.org/software/guile/)
-]))
+AC_CHECK_HEADER(libguile.h, HAVE_LIBGUILE1_H=1)
+AC_CHECK_HEADER(guile/1.8/libguile.h, HAVE_LIBGUILE1_H=1)
+AC_CHECK_HEADER(guile/2.0/libguile.h, HAVE_LIBGUILE2_H=1)
+if test x${HAVE_LIBGUILE1} != x1 && test x${HAVE_LIBGUILE2} != x1; then
+   # OK this is a notice and not an error, for some
+   # reason guile/2.0/libguile.h is not detected, in fact
+   # it includes other headers that would need -Iguile/2.0
+   # to work...
+   AC_MSG_NOTICE([Liquid War 6 needs Guile 1.8 or 2.0 (http://www.gnu.org/software/guile/)])
+fi
+AC_CHECK_LIB(dl, dlopen, HAVE_LIBDL=1, AC_MSG_NOTICE([Liquid War 6 can need libdl because of Guile (http://www.gnu.org/software/libc/)]))
+AC_CHECK_LIB(gc, GC_malloc, HAVE_LIBGC=1, AC_MSG_NOTICE([Liquid War 6 can need libgc because of Guile (https://launchpad.net/libgc)]))
 
 GUILE_CFLAGS=""
 GUILE_LDFLAGS=""
@@ -174,32 +177,38 @@ if test "x${lw6_ms_windows}" != "xyes" && test "x${lw6_gp2x}" != "xyes" ; then
    AC_CHECK_PROG(GUILE, guile, yes, no)
    if test x${GUILE} != xyes; then
       AC_MSG_ERROR([
-*** Liquid War 6 needs Guile 1.8 (http://www.gnu.org/software/guile/)
+*** Liquid War 6 needs Guile 1.8 or 2.0 (http://www.gnu.org/software/guile/)
 ])
    fi
    AC_CHECK_PROG(GUILE_CONFIG, guile-config, yes, no)
    if test x${GUILE_CONFIG} != xyes; then
       AC_MSG_ERROR([
-*** Liquid War 6 needs Guile 1.8 (http://www.gnu.org/software/guile/)
+*** Liquid War 6 needs Guile 1.8 or 2.0 (http://www.gnu.org/software/guile/)
 ])
    fi
    if guile-config --version 2> /dev/null ; then
       GUILE_CFLAGS=`guile-config compile`
       GUILE_LDFLAGS=`guile-config link`
-      AC_CHECK_LIB(guile, scm_with_guile, HAVE_LIBGUILE=1, AC_MSG_ERROR([
-*** Liquid War 6 needs Guile 1.8 (http://www.gnu.org/software/guile/)
-]))
+      AC_CHECK_LIB(guile, scm_with_guile, HAVE_LIBGUILE1=1, AC_MSG_NOTICE([Liquid War 6 needs Guile (http://www.gnu.org/software/guile/)]), [$GUILE_LDFLAGS])
+      AC_CHECK_LIB(guile-2.0, scm_with_guile, HAVE_LIBGUILE2=1, AC_MSG_NOTICE([Liquid War 6 needs Guile (http://www.gnu.org/software/guile/)]), [$GUILE_LDFLAGS])
+      if test x${HAVE_LIBGUILE1} != x1 && test x${HAVE_LIBGUILE2} != x1; then
+      AC_MSG_ERROR([
+*** Liquid War 6 needs Guile 1.8 or 2.0 (http://www.gnu.org/software/guile/)
+])
+      fi
    else
       # Guile-config doesn't work (GP2X for instance), use builtin
       GUILE_LDFLAGS="-lguile -lgmp -lpthread -lltdl"
       AC_CHECK_LIB(guile, scm_with_guile, HAVE_LIBGUILE=1, AC_MSG_ERROR([
-*** Liquid War 6 needs Guile 1.8 (http://www.gnu.org/software/guile/)
+*** Liquid War 6 needs Guile 1.8 or 2.0 (http://www.gnu.org/software/guile/)
 ]), -lgmp -lpthread -lltdl)
    fi
 fi
+
 AC_SUBST(GUILE_CFLAGS)
 AC_SUBST(GUILE_LDFLAGS)
 
+dnl ltdl
 AC_CHECK_HEADER(ltdl.h, HAVE_LTDL_H=1, AC_MSG_ERROR([
 *** Liquid War 6 needs ltdl (http://www.gnu.org/software/libtool/)
 ]))
@@ -207,14 +216,15 @@ AC_CHECK_LIB(ltdl, lt_dlopen, HAVE_LIBLTDL=1, AC_MSG_ERROR([
 *** Liquid War 6 needs ltdl (http://www.gnu.org/software/libtool/)
 ]))
 
+dnl zlib
 AC_CHECK_HEADER(zlib.h, HAVE_ZLIB_H=1, AC_MSG_ERROR([
 *** Liquid War 6 needs zlib (http://www.zlib.net/)
 ]))
-
 AC_CHECK_LIB(z, gzopen, HAVE_LIBZ=1, AC_MSG_ERROR([
 *** Liquid War 6 needs zlib (http://www.zlib.net/)
 ]))
 
+dnl expat
 AC_CHECK_HEADER(expat.h, HAVE_EXPAT_H=1, AC_MSG_ERROR([
 *** Liquid War 6 needs Expat (http://www.libexpat.org/)
 ]))
