--- a/liquidwar6/src/lib/Makefile.am
+++ b/liquidwar6/src/lib/Makefile.am
@@ -22,7 +22,7 @@ if ALLINONE
 AM_CFLAGS = @LW6_CFLAGS@ @GUILE_CFLAGS@ @SDL_CFLAGS@
 AM_LDFLAGS = @LW6_LDFLAGS@ @SDL_LIBS@ @SDL_LIBS_SOUND@
 else
-AM_CFLAGS = @LW6_CFLAGS@
+AM_CFLAGS = @LW6_CFLAGS@ @GUILE_CFLAGS@
 AM_LDFLAGS = @LW6_LDFLAGS@
 endif
 
