--- a/liquidwar6/src/lib/Makefile.in
+++ b/liquidwar6/src/lib/Makefile.in
@@ -395,7 +395,7 @@ target_vendor = @target_vendor@
 top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
-@ALLINONE_FALSE@AM_CFLAGS = @LW6_CFLAGS@
+@ALLINONE_FALSE@AM_CFLAGS = @LW6_CFLAGS@ @GUILE_CFLAGS@
 @ALLINONE_TRUE@AM_CFLAGS = @LW6_CFLAGS@ @GUILE_CFLAGS@ @SDL_CFLAGS@
 @ALLINONE_FALSE@AM_LDFLAGS = @LW6_LDFLAGS@
 @ALLINONE_TRUE@AM_LDFLAGS = @LW6_LDFLAGS@ @SDL_LIBS@ @SDL_LIBS_SOUND@
