--- a/liquidwar6/src/Makefile.am
+++ b/liquidwar6/src/Makefile.am
@@ -22,7 +22,7 @@ if ALLINONE
 AM_CFLAGS = @LW6_CFLAGS@ -I${srcdir}/lib @SDL_CFLAGS@
 AM_LDFLAGS = @LW6_LDFLAGS@ @SDL_LIBS@ @SDL_LIBS_SOUND@
 else
-AM_CFLAGS = @LW6_CFLAGS@ -I${srcdir}/lib
+AM_CFLAGS = @LW6_CFLAGS@ -I${srcdir}/lib @GUILE_CFLAGS@
 AM_LDFLAGS = @LW6_LDFLAGS@
 endif
 
