--- a/liquidwar6/src/Makefile.in
+++ b/liquidwar6/src/Makefile.in
@@ -338,7 +338,7 @@ top_build_prefix = @top_build_prefix@
 top_builddir = @top_builddir@
 top_srcdir = @top_srcdir@
 @ALLINONE_FALSE@AM_CFLAGS = @LW6_CFLAGS@ -I${srcdir}/lib @GUILE_CFLAGS@
-@ALLINONE_TRUE@AM_CFLAGS = @LW6_CFLAGS@ -I${srcdir}/lib @SDL_CFLAGS@
+@ALLINONE_TRUE@AM_CFLAGS = @LW6_CFLAGS@ -I${srcdir}/lib @GUILE_CFLAGS@ @SDL_CFLAGS@
 @ALLINONE_FALSE@AM_LDFLAGS = @LW6_LDFLAGS@
 @ALLINONE_TRUE@AM_LDFLAGS = @LW6_LDFLAGS@ @SDL_LIBS@ @SDL_LIBS_SOUND@
 # Note: libgpm seem to be required only when linking statically
